--- a/blazor-pizza-intro/BlazorServerApp/Pages/Counter.razor
+++ b/blazor-pizza-intro/BlazorServerApp/Pages/Counter.razor
@@ -2,17 +2,25 @@
 
 <PageTitle>Counter</PageTitle>
 
-<h1>Counter</h1>
+<h2>Counter</h2>
 
 <p role="status">Current count: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<button class="btn btn-primary" @onclick="IncrementCount">Click me!</button>
+
+@functions {
+    public int Add(int current, int incr) => current + incr;
+}
 
 @code {
     private int currentCount = 0;
 
+    [Parameter]
+    public int IncrementAmount { get; set;} = 5;
+
     private void IncrementCount()
     {
-        currentCount++;
+        // currentCount = currentCount + IncrementAmount;
+        currentCount = Add(currentCount, IncrementAmount);
     }
 }
