--- a/blazor-pizza-intro/BlazorServerApp/wwwroot/css/site.css
+++ b/blazor-pizza-intro/BlazorServerApp/wwwroot/css/site.css
@@ -5,7 +5,7 @@ body, html {
 }
 
 body {
-    padding-top: 5rem;
+    /* padding-top: 5rem; */padding-top: 0rem;
     flex-direction: column;
     font-family: 'quicksand';
     overflow-y: hidden;
